# RayText

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  debug.sh  empty.txt  input.txt  main.c
include/: App.hpp  Command.h  Command.hpp  Common.h  Common.hpp  Cursor.h  Cursor.hpp  DArray.h  Directories.hpp  Directory.h  Directory.hpp  Editor.h  Editor.hpp  Structs.h  Structs.hpp  TextFile.h  TextFile.hpp
raylib/raylib-5.0_linux_amd64/include/: rlgl.h
src/: App.cpp  Command.c  Command.cpp  Common.c  Common.cpp  Cursor.c  Cursor.cpp  Directories.cpp  Directory.c  Directory.cpp  Editor.c  Editor.cpp  TextFile.c  TextFile.cpp  main.c  main.cpp
